--- a/Before/src/Api/appsettings.json
+++ b/Before/src/Api/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=.\\Sql;Database=CqrsInPractice;Trusted_Connection=true;"
+  "ConnectionString": "Server=.\\SqlExpress;Database=CqrsInPractice;Trusted_Connection=true;"
 }
